# monitoring-nia-pi

./: .gitignore  AGENTS.md  Makefile  NIA-stream-dashboard.code-workspace  README.md  compose.yml  env.sample  justfile  mkdocs.yml  monitoring-nia-pi.code-workspace  pyproject.toml  refactor-plan.md  refactor.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
docs/: cloudflare.md  contributing.md  index.md  roadmap.md
docs/developer/: architecture.md  decisions.md  ffmpeg-vimeo.md  grafana.md  influxdb.md  prometheus.md  scripts.md  slice.md  telegraf.md  variable-review.md
docs/user/: configuration.md  dashboards.md  getting-started.md  operations.md
ffmpeg/: Dockerfile  run.sh
grafana/dashboards/: cherry-host.json  dashboards.yml  device-overview.json  device-page.json  fleet-hosts.json  general.json  network-health.json  speedtest.json
grafana/datasources/: influxdb.yml  prometheus.yml
prometheus/: prometheus.yml
prometheus/targets/: blackbox.yml  node_remote.yml  probe_icmp.yml  speedtest.yml
scripts/: roll-slice-ports.sh  vimeo-exporter.py  vimeodata.py
telegraf/: Dockerfile  telegraf.conf
template/endpoint/: README.md  compose.yml  env.sample  justfile
template/endpoint/blackbox/: blackbox.yml
