[project]
name = "nia-stream-dashboard"
version = "0.1.0"
description = "NIA monitoring server stack: Prometheus, Grafana, and (later) a Vimeo/ffprobe exporter"
requires-python = ">=3.12"
dependencies = [
  "pyvimeo",
  "python-dotenv",
  "influxdb-client",
]

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
